<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NuevoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CalendarAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_calendar_today_24"
        android:hint="@string/fecha_de_conteo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FechaCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CameraActionCM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/identificador"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_camera_alt_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdenMBCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/tipo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TypeMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/descripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DescriptionMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/ubicacion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LocationMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/guardar"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="538dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaMediosContados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>