<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlueDark"
    android:padding="6dp"
    tools:context=".VerActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CameraAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:hint="@string/identificador"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_camera_alt_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/IdenMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="12dp"
        android:hint="@string/tipo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TypeMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="12dp"
        android:hint="@string/descripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DescriptionMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="12dp"
        android:hint="@string/ubicacion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LocationMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:text="Guardar"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="538dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_edit_24"
            android:layout_marginLeft="122dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/ic_delete_24"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>
</LinearLayout>