<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlueDark"
    android:padding="12dp"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideInset"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ListadoMedios"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="24dp">
            <LinearLayout
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_table_chart_24"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBluePrimary"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/listado"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/total_de_medios"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/Inventory"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="24dp">
            <LinearLayout
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_inventorymb_24"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBluePrimary"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/inventario_mensual"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/conteo_mensual"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/NewItem"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="24dp">
            <LinearLayout
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_baseline_add_24"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBluePrimary"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/nuevo_medios"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/nuevos_medios"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/FichaTecnica"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="24dp">
            <LinearLayout
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_datasheetmb_24"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBluePrimary"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/ficha_tecnica"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/expedientes_tecnicos"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/EstadoPC"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="24dp">
            <LinearLayout
                android:id="@+id/img4"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_statuspc_24"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBluePrimary"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/estado_pc"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/status"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/GenerateCodes"
            android:layout_width="160dp"
            android:layout_height="180dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="?attr/colorButtonNormal"
            app:cardCornerRadius="24dp">

            <LinearLayout
                android:id="@+id/img5"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="2dp"
                    android:src="@drawable/ic_baseline_camera_alt_24"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/colorBluePrimary"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/generar"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:text="@string/generar_codigos1"
                    android:textAppearance="?attr/textAppearanceBody2" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</LinearLayout>